# air780e-sms-uart-server

./: .gitignore  README.en.md  README.md
.github/workflows/: build.yml  test.yml
script/: config.lua  main.lua  sms_handler.lua  uart_handler.lua  util.lua
server/: Cargo.toml  config.example.toml  sms.db
server/src/: config.rs  connection.rs  database.rs  main.rs  notification.rs  serial_port.rs
soc_release/EC618/: Air780e_SMS_UART_Sender_1.0.0_LuatOS-SoC_V1115_EC618.binpkg
