[package]
name = "air780e-uart-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-serial = { version = "5.4" }
regex = { version = "1.12" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
serde_json = "1.0"
async-trait = "0.1"
urlencoding = "2.1"
